--- a/cicd/Jenkinsfile
+++ b/cicd/Jenkinsfile
@@ -12,5 +12,10 @@ pipeline {
                 }
             }
         }
+        stage('Deploy to Staging'){
+            steps {
+                build job: 'DEPLOY-TO-STAGING'
+            }
+        }                
     }
 }
